deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: myapp
spec: 
  replicas: 2
  selector:
    matchLables:
      app: niginx
  template:
    metadata:
      lables:
        app: niginx
    spec:
      containers:
        - name: cont1
          image: sriramduvvuru/kuberfirst:appimage
          ports:
            - containerPort: 80

          # configmap integration
          envfrom:
            - configMapRef:
                name: bankapp-config
          # resource-quota integration
          resources:
            requests:
              cpu: '100m'
              memory: '128Mi'
            limits:
              cpu: '200m'
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 5
            
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
