service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: my-service
spec:
  type: clusterIP
  selector:
    app: niginx
  ports:
    - port: 80
      targetPort: 80
